<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:background="@drawable/linearlayout_bg">

        <TextView
            android:id="@+id/txt_head_add_marker_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_marker_fragment_header"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <View
            android:id="@+id/add_marker_seperator_1"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_below="@+id/txt_head_add_marker_fragment"
            android:layout_marginBottom="3dp"
            android:background="@drawable/seperator_horizontal" />

        <TextView
            android:id="@+id/add_marker_longitude_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_marker_seperator_1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/add_marker_longitude_txt"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/add_marker_latitude_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_marker_longitude_txt"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/add_marker_latitude_txt"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <View
            android:id="@+id/add_marker_seperator_2"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_below="@+id/add_marker_latitude_txt"
            android:layout_marginBottom="3dp"
            android:background="@drawable/seperator_horizontal" />

        <TextView
            android:id="@+id/add_marker_username_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_marker_seperator_2"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/add_marker_username_txt"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/add_marker_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_marker_username_txt"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/add_marker_title_txt"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_marker_title_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_marker_title_txt"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/add_marker_title_edit_hint"
            android:maxEms="20"
            android:textColor="#AAFFFF" />

        <TextView
            android:id="@+id/add_marker_text_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_marker_title_edit"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/add_marker_text_txt"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_marker_text_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_marker_text_txt"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/add_marker_text_edit_hint"
            android:maxEms="100"
            android:textColor="#AAFFFF" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="#01000000">

            <Button
                android:id="@+id/btn_marker_abort"
                style="@style/LoginButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/add_marker_seperator_3"
                android:layout_toStartOf="@+id/add_marker_seperator_3"
                android:background="#00000000"
                android:text="@string/abort_btn_text" />

            <View
                android:id="@+id/add_marker_seperator_3"
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:layout_toLeftOf="@+id/btn_marker_submit"
                android:layout_toStartOf="@+id/btn_marker_submit"
                android:background="@drawable/seperator_horizontal" />

            <Button
                android:id="@+id/btn_marker_submit"
                style="@style/LoginButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="#00000000"
                android:text="@string/post_btn_text" />

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>