<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:id="@+id/btnGplus"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/layers_gp_button_bg"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/btn_login_google" />

        <Button
            android:id="@+id/btnFb"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/layers_fb_button_bg"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/btn_login_facebook" />

        <Button
            android:id="@+id/btnTw"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/layers_tw_button_bg"
            android:enabled="false"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/btn_login_twitter"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login_ex"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ff2c8021"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingStart="30dp"
            android:paddingTop="8dp"
            android:text="@string/btn_login_without" />

    </LinearLayout>

    <WebView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>