<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.trottl.staytment.SettingsFragment">

    <TextView
        android:layout_width="237dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/head_settings"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="80dp"
        android:background="@color/bg_color"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_logout"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:background="@color/list_background"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="0dp"
            android:paddingRight="10dp"
            android:paddingStart="0dp"
            android:paddingTop="10dp"
            android:text="@string/btn_logout"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_about"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:background="@color/list_background"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="0dp"
            android:paddingRight="10dp"
            android:paddingStart="0dp"
            android:paddingTop="10dp"
            android:text="@string/btn_about"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

    </LinearLayout>

</FrameLayout>